--- a/Index2.html
+++ b/Index2.html
@@ -15,7 +15,7 @@
 </body>
     <img src="logo.svg" alt="altschool logo" width="60" height="60">
 <ul>
-  <li><a href="Home.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="#">About</a></li>
 </ul>  
 <br>
