--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 <img src="logo.svg" alt="altschool logo" width="60" height="60" class="picture">
 <ul>
-  <li><a href="assignment.html">Home</a></li>
-  <li><a href="Sign_up.html">Sign up</a></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="index2.html">Sign up</a></li>
 </ul> 
 <br>
 <details>
